fixed color contrast

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 html {
     --text: rgb(255, 255, 255);
     --background: rgb(255, 248, 229);
-    --primary: rgb(95, 162, 179);
-    --secondary: rgb(95, 162, 179);
-    --accent: rgb(95, 162, 179);
-    --anotha1: rgb(95, 162, 179);
+    --primary: rgb(81, 136, 150);
+    --secondary: rgb(81, 136, 150);
+    --accent: rgb(81, 136, 150);
+    --anotha1: rgb(81, 136, 150);
 }
 
 body {
@@ -13,15 +13,15 @@ body {
 }
 
 h1 {
-    color: rgb(110, 187, 206);
+    color: rgb(81, 136, 150)
 }
 
 h2 {
-    color: rgb(120, 209, 231)
+    color: rgb(81, 136, 150)
 }
 
 h3 {
-    color: rgb(120, 209, 231)
+    color: rgb(81, 136, 150)
 }
 
 h4 {
@@ -47,7 +47,7 @@ h1 {
 }
 
 :link {
-    color: rgb(119, 205, 226);
+    color:rgb(81, 136, 150);
     font-size: 10pt
 }
 
@@ -61,7 +61,7 @@ h1 {
 }
 
 :visited {
-    color:  rgb(119, 205, 226);
+    color:  rgb(81, 136, 150)
 }
 
 .guitar {
@@ -101,7 +101,7 @@ h1 {
 }
 
 .the_word_links {
-    color: rgb(119, 205, 226)
+    color: rgb(81, 136, 150)
 }
 
 .video_games_image {
@@ -151,7 +151,7 @@ h1 {
 .guitar-text {
     font-size: 1.2rem;
     font-weight: bold;
-    color: rgb(119, 205, 226);         
+    color: rgb(81, 136, 150)     
 }
 
 .video_game-container {
@@ -163,7 +163,7 @@ h1 {
 .video_game-text {
     font-size: 1.2rem;
     font-weight: bold;
-    color: rgb(119, 205, 226);         
+    color: rgb(81, 136, 150)        
 }
 
 #balloon {
@@ -179,7 +179,7 @@ h1 {
     left: 10px;        
     font-size: 14px;
     text-decoration: none;
-    color: rgb(119, 205, 226);
+    color: rgb(81, 136, 150);
 }
 
 #resetBtn {
@@ -208,7 +208,7 @@ h1 {
     left: 50%;            
     transform: translateX(-50%); 
     background-color: rgba(0, 0, 0, 0.7); 
-    color: rgb(119, 205, 226);    
+    color: rgb(81, 136, 150);   
     padding: 10px 15px;
     border-radius: 8px;
     font-size: 18px;
@@ -250,6 +250,6 @@ input, select, button {
 }
 
 #message {
-    margin-top: 10px;
+    margin-top:10px;
     font-weight: bold;
 }
